Sat Feb 16 02:08:29 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Allow TCL_INC to be passed to configure.  (fixes #612)

Wed Jan 23 00:07:52 GMT 2013  Olly Betts <olly@survex.com>

	* perl/t/10query.t: Perl 5.16.1 adds a '.' after "at foo line 123" so
	  adjust regexp in testcase to allow an optional '.' there.
	  (ticket#610)

Wed Jan 16 10:00:00 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Start to update in preparation for 1.3.1 release.

Wed Jan 16 02:32:38 GMT 2013  Olly Betts <olly@survex.com>

	* ruby/smoketest.rb: Extend testcase to check returned MSet size.

Wed Jan 16 01:41:33 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,generic/generic.mk: Improve workaround which allows
	  building against an uninstalled xapian-core on OS X - this should
	  now work with any uninstalled xapian-core (not only in a tree
	  with the same layout as an SVN or git checkout) and it also won't
	  try to build against "../xapian-core/.libs" just because it happens
	  to exist.  (Fixes #322)

Wed Jan 16 01:34:09 GMT 2013  Olly Betts <olly@survex.com>

	* java/run-java-test: Document how to run tests under gdb.

Wed Jan 16 01:30:28 GMT 2013  Olly Betts <olly@survex.com>

	* java/Makefile.am: Don't automatically pass -g to javac when in
	  maintainer-mode, as the two should really be orthogonal.  Instead
	  use JAVACFLAGS when running JAVAC to allow extra flags to be
	  specified by running "make JAVACFLAGS=-g".

Wed Jan 09 11:57:01 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2 branch.

Mon Dec 24 05:15:56 GMT 2012  Olly Betts <olly@survex.com>

	* perl/Search/Xapian/Stem.pm: Fix documentation typo.

Mon Dec 24 05:15:12 GMT 2012  Olly Betts <olly@survex.com>

	* perl/util.i.in: Update list of unwrapped things.

Mon Dec 24 04:42:42 GMT 2012  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/stem.t: Add test that we can create all the
	  stemmers returned by Stem::get_available_languages().
