@@ -29,15 +29,15 @@ SWIG_WERROR = -Werror
 # Recover from the removal of $@.  A full explanation of this is in the
 # automake manual under the heading "Multiple Outputs".
 make_many_locked = \
-if test -f $@; then :; else \
-  trap 'rm -rf "$$stamp-lck" "$$stamp"' 1 2 13 15; \
-  if mkdir "$$stamp-lck" 2>/dev/null; then \
-    rm -f "$$stamp"; \
-    $(MAKE) $(AM_MAKEFLAGS) "$$stamp"; \
-    result=$$?; rm -rf "$$stamp-lck"; exit $$result; \
+@if test -f $@; then :; else \
+  trap 'rm -rf "$(stamp)-lck" "$(stamp)"' 1 2 13 15; \
+  if mkdir '$(stamp)-lck' 2>/dev/null; then \
+    rm -f '$(stamp)'; \
+    $(MAKE) $(AM_MAKEFLAGS) '$(stamp)'; \
+    result=$$?; rm -rf '$(stamp)-lck'; exit $$result; \
   else \
-    while test -d "$$stamp-lck"; do sleep 1; done; \
-    test -f "$$stamp"; \
+    while test -d '$(stamp)-lck'; do sleep 1; done; \
+    test -f '$(stamp)'; \
   fi; \
 fi
 
