@@ -63,11 +63,12 @@ except.i: $(srcdir)/generate-php-exceptions ../../xapian-core/exception_data.pm
 # "\" when extracting the output directory from the value passed to the -o
 # option.
 
-RUN_SWIG = $(PERL) '$(top_srcdir)'/swig-depcomp $(SWIG)
+stamp = php5/xapian_wrap.stamp
+RUN_SWIG = stamp='$(stamp)' $(PERL) '$(top_srcdir)'/swig-depcomp $(SWIG)
 
-php5/xapian_wrap.cc php5/xapian_wrap.h php5/php_xapian.h php5/xapian.php: php5/xapian_wrap.stamp
-	@stamp=php5/xapian_wrap.stamp; $(make_many_locked)
-php5/xapian_wrap.stamp: except.i add-php-type-hints
+php5/xapian_wrap.cc php5/xapian_wrap.h php5/php_xapian.h php5/xapian.php: $(stamp)
+	$(make_many_locked)
+$(stamp): except.i add-php-type-hints
 	-test -d php5 || mkdir php5
 	$(multitarget_begin)
 	$(RUN_SWIG) $(SWIG_WERROR) -I'$(srcdir)' $(SWIG_FLAGS) -c++ \
@@ -79,7 +80,7 @@ php5/xapian_wrap.stamp: except.i add-php-type-hints
 
 -include php5/xapian_wrap.d
 
-CLEANFILES = php5/xapian_wrap.stamp
+CLEANFILES = $(stamp)
 endif
 MAINTAINERCLEANFILES = $(BUILT_SOURCES)
 
